[gd_scene load_steps=6 format=3 uid="uid://yopnoeejc2om"]

[ext_resource type="Script" uid="uid://c6rc5c7shfp0y" path="res://scenes/ui/screen/substance_screen/substance_category/substance_item/substance_item.gd" id="1_etpxj"]
[ext_resource type="Texture2D" uid="uid://ba3fuq18t7tiq" path="res://assets/image/art/rabbit.png" id="2_74x44"]
[ext_resource type="PackedScene" uid="uid://bpq246h5ihhck" path="res://scenes/component/shake_shader_component/shake_shader_component.tscn" id="3_q3wpk"]
[ext_resource type="PackedScene" uid="uid://bjmn4owp4lhaj" path="res://scenes/component/tween/new_unlock_tween/new_unlock_tween.tscn" id="4_ivx1y"]
[ext_resource type="PackedScene" uid="uid://b3awft3ugc6q3" path="res://scenes/component/tween/simple_tween/simple_tween.tscn" id="5_kj2mx"]

[node name="SubstanceItem" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -75.5
offset_right = 44.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_etpxj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="IconMarginContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PanelMarginContainer" type="MarginContainer" parent="VBoxContainer/IconMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = -8
theme_override_constants/margin_top = -8
theme_override_constants/margin_right = -8
theme_override_constants/margin_bottom = -8

[node name="Panel" type="Panel" parent="VBoxContainer/IconMarginContainer/PanelMarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PanelHighlight" type="Panel" parent="VBoxContainer/IconMarginContainer/PanelMarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"PanelHighlight"

[node name="TextureMarginContainer" type="MarginContainer" parent="VBoxContainer/IconMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/IconMarginContainer/TextureMarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 72)
layout_mode = 2
texture = ExtResource("2_74x44")
expand_mode = 3
stretch_mode = 4

[node name="ShakeShaderComponent" parent="VBoxContainer/IconMarginContainer/TextureMarginContainer/TextureRect" instance=ExtResource("3_q3wpk")]
unique_name_in_owner = true
unique_shader_material = true

[node name="TextureButton" type="Button" parent="VBoxContainer/IconMarginContainer/TextureMarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="LabelMarginContainer" type="MarginContainer" parent="VBoxContainer/IconMarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CraftLabel" type="Label" parent="VBoxContainer/IconMarginContainer/LabelMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "?"

[node name="CraftButtonMarginContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_bottom = 8

[node name="CraftButton" type="Button" parent="VBoxContainer/CraftButtonMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Craft"

[node name="RedColorRect" type="ColorRect" parent="VBoxContainer/CraftButtonMarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="CountMarginContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="CountLabel" type="Label" parent="VBoxContainer/CountMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "x3"

[node name="NewUnlockTween" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_ivx1y")]
unique_name_in_owner = true
target = NodePath("../VBoxContainer/IconMarginContainer")

[node name="RedColorRectSimpleTween" parent="." node_paths=PackedStringArray("target") instance=ExtResource("5_kj2mx")]
unique_name_in_owner = true
target = NodePath("..")
duration = 0.3
call_method = "_red_color_rect_simple_tween_method"
